# daves-runtime-starter-pack

./: __deployment__.py  fruitshop_pipeline.py  ping_job.py  pyproject.toml
.dlt/: access.config.toml  config.toml  prod.config.toml
